{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 3181,
  "lineage": "63ee8d77-311f-d1a2-c845-26b3d0391f5c",
  "resources": [
    {
      "module": "module.private-ec2-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f7e7f6c2f40dc1",
            "arn": "arn:aws:ec2:us-east-1:526753475890:instance/i-07f3325458b0bd07f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2_role",
            "id": "i-07f3325458b0bd07f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0610ee1c2bf772a7a",
            "private_dns": "ip-10-0-0-133.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0700517642fb152fe",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072bc70cf406a83ea",
            "tags": {
              "Name": "Private AppTier EC2 Server"
            },
            "tags_all": {
              "Name": "Private AppTier EC2 Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0247ffdcee2949fb4"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "module.ec2-iam-role.aws_iam_instance_profile.this",
            "module.ec2-iam-role.aws_iam_role.this",
            "module.ec2-iam-role.data.aws_iam_policy_document.this",
            "module.security-group.aws_security_group.private_alb_sg",
            "module.security-group.aws_security_group.private_servers_sg",
            "module.security-group.aws_security_group.public_alb_sg",
            "module.security-group.aws_security_group.webtier_servers_sg",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:526753475890:loadbalancer/app/private-alb-apptier/2ed755adc9a64acb",
            "arn_suffix": "app/private-alb-apptier/2ed755adc9a64acb",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-private-alb-apptier-1138871409.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:526753475890:loadbalancer/app/private-alb-apptier/2ed755adc9a64acb",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "private-alb-apptier",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09228b6ca6c7bfa87",
              "sg-0d1c8e1fc79b5bf46"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04f519a5b4dc96364"
              },
              {
                "subnet_id": "subnet-072bc70cf406a83ea"
              }
            ],
            "subnets": [
              "subnet-04f519a5b4dc96364",
              "subnet-072bc70cf406a83ea"
            ],
            "tags": {
              "Name": "private-alb-apptier"
            },
            "tags_all": {
              "Name": "private-alb-apptier"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-08572bb8af31b1c5f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.private_alb.aws_security_group.this",
            "module.security-group.aws_security_group.private_alb_sg",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:526753475890:listener/app/private-alb-apptier/2ed755adc9a64acb/ab76ffa6a7061f99",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:526753475890:targetgroup/apptie20230903045856167300000004/8eca4c432595bdda",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:526753475890:listener/app/private-alb-apptier/2ed755adc9a64acb/ab76ffa6a7061f99",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:526753475890:loadbalancer/app/private-alb-apptier/2ed755adc9a64acb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_alb.aws_lb.this",
            "module.private_alb.aws_lb_target_group.main",
            "module.private_alb.aws_security_group.this",
            "module.security-group.aws_security_group.private_alb_sg",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.private_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:526753475890:targetgroup/apptie20230903045856167300000004/8eca4c432595bdda",
            "arn_suffix": "targetgroup/apptie20230903045856167300000004/8eca4c432595bdda",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:526753475890:targetgroup/apptie20230903045856167300000004/8eca4c432595bdda",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "apptie20230903045856167300000004",
            "name_prefix": "apptie",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "apptie"
            },
            "tags_all": {
              "Name": "apptie"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08572bb8af31b1c5f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526753475890:security-group/sg-09228b6ca6c7bfa87",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09228b6ca6c7bfa87",
            "ingress": [],
            "name": "private-alb-apptier-20230903045856159100000001",
            "name_prefix": "private-alb-apptier-",
            "owner_id": "526753475890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-alb-apptier"
            },
            "tags_all": {
              "Name": "private-alb-apptier"
            },
            "timeouts": null,
            "vpc_id": "vpc-08572bb8af31b1c5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public-ec2-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f7e7f6c2f40dc1",
            "arn": "arn:aws:ec2:us-east-1:526753475890:instance/i-0ee211253c29dcbb7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2_role",
            "id": "i-0ee211253c29dcbb7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyAWSKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-067d5b4465f7886f3",
            "private_dns": "ip-10-0-100-140.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.100.140",
            "public_ip": "44.192.39.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-019aa4d745bcbb72f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-092bdfe37d69bca00",
              "sg-0d8f75cc1ed500cd7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090f16b20123ef73e",
            "tags": {
              "Name": "Public WebTier EC2 Server"
            },
            "tags_all": {
              "Name": "Public WebTier EC2 Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-092bdfe37d69bca00",
              "sg-0d8f75cc1ed500cd7"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "module.ec2-iam-role.aws_iam_instance_profile.this",
            "module.key-pair.aws_key_pair.key_pair_publicserver",
            "module.key-pair.tls_private_key.generated",
            "module.nginx-config.aws_s3_object.nginx_file",
            "module.nginx-config.data.template_file.nginx_config",
            "module.nginx-config.local_file.create_nginx_config_file",
            "module.private_alb.aws_lb.this",
            "module.private_alb.aws_security_group.this",
            "module.s3_bucket.aws_s3_bucket.this",
            "module.s3_bucket.aws_s3_bucket_policy.this",
            "module.security-group.aws_security_group.private_alb_sg",
            "module.security-group.aws_security_group.ssh_access_sg",
            "module.security-group.aws_security_group.webtier_servers_sg",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:526753475890:loadbalancer/app/public-alb-webtier/69d67e531b939c8f",
            "arn_suffix": "app/public-alb-webtier/69d67e531b939c8f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "public-alb-webtier-447800077.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:526753475890:loadbalancer/app/public-alb-webtier/69d67e531b939c8f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public-alb-webtier",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04feaba31ddfc13c6",
              "sg-0601af29e3a0fd237"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0768130152ed599d3"
              },
              {
                "subnet_id": "subnet-090f16b20123ef73e"
              }
            ],
            "subnets": [
              "subnet-0768130152ed599d3",
              "subnet-090f16b20123ef73e"
            ],
            "tags": {
              "Name": "public-alb-webtier"
            },
            "tags_all": {
              "Name": "public-alb-webtier"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-08572bb8af31b1c5f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.public_alb.aws_security_group.this",
            "module.security-group.aws_security_group.public_alb_sg",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.public_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:526753475890:listener/app/public-alb-webtier/69d67e531b939c8f/c3a6dbf7a7e50986",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:526753475890:targetgroup/webtg20230903045856167300000003/c8c2b7284046b741",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:526753475890:listener/app/public-alb-webtier/69d67e531b939c8f/c3a6dbf7a7e50986",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:526753475890:loadbalancer/app/public-alb-webtier/69d67e531b939c8f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_alb.aws_lb.this",
            "module.public_alb.aws_lb_target_group.main",
            "module.public_alb.aws_security_group.this",
            "module.security-group.aws_security_group.public_alb_sg",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.public_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:526753475890:targetgroup/webtg20230903045856167300000003/c8c2b7284046b741",
            "arn_suffix": "targetgroup/webtg20230903045856167300000003/c8c2b7284046b741",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:526753475890:targetgroup/webtg20230903045856167300000003/c8c2b7284046b741",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webtg20230903045856167300000003",
            "name_prefix": "webtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "webtg"
            },
            "tags_all": {
              "Name": "webtg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08572bb8af31b1c5f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526753475890:security-group/sg-0601af29e3a0fd237",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0601af29e3a0fd237",
            "ingress": [],
            "name": "public-alb-webtier-20230903045856162300000002",
            "name_prefix": "public-alb-webtier-",
            "owner_id": "526753475890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-alb-webtier"
            },
            "tags_all": {
              "Name": "public-alb-webtier"
            },
            "timeouts": null,
            "vpc_id": "vpc-08572bb8af31b1c5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526753475890:security-group/sg-009874d7980594958",
            "description": "data bases tier security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009874d7980594958",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0247ffdcee2949fb4"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db_sg",
            "name_prefix": "",
            "owner_id": "526753475890",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08572bb8af31b1c5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.private_alb_sg",
            "module.security-group.aws_security_group.private_servers_sg",
            "module.security-group.aws_security_group.public_alb_sg",
            "module.security-group.aws_security_group.webtier_servers_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526753475890:security-group/sg-0d1c8e1fc79b5bf46",
            "description": "Private load balancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1c8e1fc79b5bf46",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d8f75cc1ed500cd7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_alb_sg",
            "name_prefix": "",
            "owner_id": "526753475890",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08572bb8af31b1c5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.public_alb_sg",
            "module.security-group.aws_security_group.webtier_servers_sg",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_servers_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526753475890:security-group/sg-0247ffdcee2949fb4",
            "description": "Private App Tier EC2 instances security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0247ffdcee2949fb4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d1c8e1fc79b5bf46"
                ],
                "self": false,
                "to_port": 4000
              }
            ],
            "name": "private_servers_sg",
            "name_prefix": "",
            "owner_id": "526753475890",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08572bb8af31b1c5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.private_alb_sg",
            "module.security-group.aws_security_group.public_alb_sg",
            "module.security-group.aws_security_group.webtier_servers_sg",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526753475890:security-group/sg-04feaba31ddfc13c6",
            "description": "Public load balancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04feaba31ddfc13c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_alb_sg",
            "name_prefix": "",
            "owner_id": "526753475890",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08572bb8af31b1c5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_access_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526753475890:security-group/sg-092bdfe37d69bca00",
            "description": "SSH security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092bdfe37d69bca00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_sg",
            "name_prefix": "",
            "owner_id": "526753475890",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08572bb8af31b1c5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webtier_servers_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526753475890:security-group/sg-0d8f75cc1ed500cd7",
            "description": "Public web tier EC2 instances security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8f75cc1ed500cd7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04feaba31ddfc13c6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webtier_servers_sg",
            "name_prefix": "",
            "owner_id": "526753475890",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08572bb8af31b1c5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.public_alb_sg",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00966c463f314e084",
            "association_id": "eipassoc-078b54ee96573db5a",
            "domain": "vpc",
            "id": "eipalloc-00966c463f314e084",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00622ce42f50596df",
            "private_dns": "ip-10-0-100-92.ec2.internal",
            "private_ip": "10.0.100.92",
            "public_dns": "ec2-44-219-150-74.compute-1.amazonaws.com",
            "public_ip": "44.219.150.74",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_gateway_eip_1"
            },
            "tags_all": {
              "Name": "nat_gateway_eip_1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad9ddd1ab77f091b",
            "association_id": "eipassoc-0395ef231ce96c1fa",
            "domain": "vpc",
            "id": "eipalloc-0ad9ddd1ab77f091b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03db741326c32709a",
            "private_dns": "ip-10-0-101-205.ec2.internal",
            "private_ip": "10.0.101.205",
            "public_dns": "ec2-52-2-96-222.compute-1.amazonaws.com",
            "public_ip": "52.2.96.222",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_gateway_eip_2"
            },
            "tags_all": {
              "Name": "nat_gateway_eip_2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526753475890:internet-gateway/igw-036adecb066e5827b",
            "id": "igw-036adecb066e5827b",
            "owner_id": "526753475890",
            "tags": {
              "Name": "vpc_webapp_project_igw"
            },
            "tags_all": {
              "Name": "vpc_webapp_project_igw"
            },
            "vpc_id": "vpc-08572bb8af31b1c5f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00966c463f314e084",
            "association_id": "eipassoc-078b54ee96573db5a",
            "connectivity_type": "public",
            "id": "nat-0d5275a21c76cfe3f",
            "network_interface_id": "eni-00622ce42f50596df",
            "private_ip": "10.0.100.92",
            "public_ip": "44.219.150.74",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-090f16b20123ef73e",
            "tags": {
              "Name": "nat_gateway_us-east-1a"
            },
            "tags_all": {
              "Name": "nat_gateway_us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad9ddd1ab77f091b",
            "association_id": "eipassoc-0395ef231ce96c1fa",
            "connectivity_type": "public",
            "id": "nat-07a661a9038318775",
            "network_interface_id": "eni-03db741326c32709a",
            "private_ip": "10.0.101.205",
            "public_ip": "52.2.96.222",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0768130152ed599d3",
            "tags": {
              "Name": "nat_gateway_us-east-1b"
            },
            "tags_all": {
              "Name": "nat_gateway_us-east-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526753475890:route-table/rtb-0b356cb65d87d5404",
            "id": "rtb-0b356cb65d87d5404",
            "owner_id": "526753475890",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d5275a21c76cfe3f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rtb_us-east-1a"
            },
            "tags_all": {
              "Name": "private_rtb_us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-08572bb8af31b1c5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526753475890:route-table/rtb-0caeb0a62484f0f67",
            "id": "rtb-0caeb0a62484f0f67",
            "owner_id": "526753475890",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07a661a9038318775",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rtb_us-east-1b"
            },
            "tags_all": {
              "Name": "private_rtb_us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-08572bb8af31b1c5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526753475890:route-table/rtb-04943feff88694e9b",
            "id": "rtb-04943feff88694e9b",
            "owner_id": "526753475890",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-036adecb066e5827b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rtb"
            },
            "tags_all": {
              "Name": "public_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-08572bb8af31b1c5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0394f704af48c5a20",
            "route_table_id": "rtb-0b356cb65d87d5404",
            "subnet_id": "subnet-072bc70cf406a83ea"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b70c48e93d25093",
            "route_table_id": "rtb-0caeb0a62484f0f67",
            "subnet_id": "subnet-04f519a5b4dc96364"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073edb1a2e6c58c82",
            "route_table_id": "rtb-04943feff88694e9b",
            "subnet_id": "subnet-090f16b20123ef73e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04660ce4748fa6478",
            "route_table_id": "rtb-04943feff88694e9b",
            "subnet_id": "subnet-0768130152ed599d3"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526753475890:subnet/subnet-072bc70cf406a83ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072bc70cf406a83ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "526753475890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_us-east-1a"
            },
            "tags_all": {
              "Name": "private_subnet_us-east-1a"
            },
            "vpc_id": "vpc-08572bb8af31b1c5f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526753475890:subnet/subnet-04f519a5b4dc96364",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f519a5b4dc96364",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "526753475890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_us-east-1b"
            },
            "tags_all": {
              "Name": "private_subnet_us-east-1b"
            },
            "vpc_id": "vpc-08572bb8af31b1c5f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526753475890:subnet/subnet-0bfe9f78f27b09d8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfe9f78f27b09d8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "526753475890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_db_us-east-1a"
            },
            "tags_all": {
              "Name": "private_subnet_db_us-east-1a"
            },
            "vpc_id": "vpc-08572bb8af31b1c5f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526753475890:subnet/subnet-09dbec4fe04cde632",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09dbec4fe04cde632",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "526753475890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_db_us-east-1b"
            },
            "tags_all": {
              "Name": "private_subnet_db_us-east-1b"
            },
            "vpc_id": "vpc-08572bb8af31b1c5f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526753475890:subnet/subnet-090f16b20123ef73e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090f16b20123ef73e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "526753475890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_us-east-1a"
            },
            "tags_all": {
              "Name": "public_subnet_us-east-1a"
            },
            "vpc_id": "vpc-08572bb8af31b1c5f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526753475890:subnet/subnet-0768130152ed599d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0768130152ed599d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "526753475890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_us-east-1b"
            },
            "tags_all": {
              "Name": "public_subnet_us-east-1b"
            },
            "vpc_id": "vpc-08572bb8af31b1c5f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526753475890:vpc/vpc-08572bb8af31b1c5f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b9301c34a5bf4a64",
            "default_route_table_id": "rtb-09afa24706c434bf9",
            "default_security_group_id": "sg-09ae0e7b4dc672b2d",
            "dhcp_options_id": "dopt-06e584d5e50550765",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08572bb8af31b1c5f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09afa24706c434bf9",
            "owner_id": "526753475890",
            "tags": {
              "Name": "vpc_webapp_project"
            },
            "tags_all": {
              "Name": "vpc_webapp_project"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}